WIP high score svc
