# microservices/high_score_svc/src/high_score_svc/models/__init__.py
@@ -1,0 +1,9 @@
+# coding: utf-8
+
+# flake8: noqa
+from __future__ import absolute_import
+# import models into model package
+from high_score_svc.models.body import Body
+from high_score_svc.models.error import Error
+from high_score_svc.models.high_score import HighScore
+from high_score_svc.models.high_score_array import HighScoreArray
