# microservices/high_score_svc/src/high_score_svc/models/high_score_array.py
@@ -1,0 +1,37 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from high_score_svc.models.base_model_ import Model
+from high_score_svc.models.high_score import HighScore  # noqa: F401,E501
+from high_score_svc import util
+
+
+class HighScoreArray(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self):  # noqa: E501
+        """HighScoreArray - a model defined in Swagger
+
+        """
+        self.swagger_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'HighScoreArray':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The HighScoreArray of this HighScoreArray.  # noqa: E501
+        :rtype: HighScoreArray
+        """
+        return util.deserialize_model(dikt, cls)
