# microservices/high_score_svc/src/high_score_svc/validators/user.py
@@ -1,0 +1,2 @@
+def is_valid_username(username: str):
+    return len(username) <= 64
